--- a/rustlisp.configuration.json
+++ b/rustlisp.configuration.json
@@ -1,19 +1,15 @@
 {
-    "comments": {
-        "lineComment": ";"
-    },
-    "brackets": [
-        [
-            "{",
-            "}"
-        ],
-        [
-            "[",
-            "]"
-        ],
-        [
-            "(",
-            ")"
-        ]
-    ]
+  "comments": {
+    "lineComment": ";",
+    "blockComment": ["#|", "|#"]
+  },
+  "brackets": [["{", "}"], ["[", "]"], ["(", ")"]],
+  "autoClosingPairs": [
+    { "open": "{", "close": "}" },
+    { "open": "[", "close": "]" },
+    { "open": "(", "close": ")" },
+    { "open": "\"", "close": "\"", "notIn": ["string"] },
+    { "open": "#|", "close": " |#" }
+  ],
+  "surroundingPairs": [["{", "}"], ["[", "]"], ["(", ")"], ["\"", "\""]]
 }
